fix: set min-height appropriately on iOS

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -2,6 +2,14 @@
 @tailwind components;
 @tailwind utilities;
 
+/* iOS height fix */
+@supports (-webkit-touch-callout: none) {
+  .min-h-screen {
+    min-height: -webkit-fill-available;
+  }
+}
+
+
 @layer utilities {
   .text-responsive-sm {
     font-size: clamp(0.875rem, 0.5rem + 0.8vw, 1rem);
